try to fix single todo text vertical-align

--- a/src/App.css
+++ b/src/App.css
@@ -163,13 +163,12 @@ ul {
   padding: 5px;
   list-style: none;
   font-size: small;
-  font-family: cursive;
   text-align: left;
   background-color: rgb(255, 255, 255);
   border-radius: 3px;
   margin-bottom: 10px;
   padding-left: 20px;
-  
+  vertical-align: text-bottom;
 }
 
 .todo-dark {
@@ -179,13 +178,13 @@ ul {
   padding: 5px;
   list-style: none;
   font-size: small;
-  font-family: cursive;
   text-align: left;
   background-color: rgb(31, 31, 31);
   color: white;
   border-radius: 3px;
   margin-bottom: 10px;
   padding-left: 20px;
+  vertical-align: middle;
 }
 
 
